# Advent-of-Code

./: .gitignore  README.md  pyproject.toml
2015/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2016/: day1.py  day10.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2017/: auto_runner.sh  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day19.py  day2.py  day20.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  makefile
2021/: makefile  template.py
2021/day1/: main.py
2021/day10/: main.py
2021/day11/: main.py
2021/day12/: main.py
2021/day13/: main.py
2021/day14/: main.py
2021/day15/: main.py
2021/day16/: main.py
2021/day17/: main.py
2021/day18/: main.py
2021/day2/: main.py
2021/day3/: main.py
2022/: day-1.py  day-2.py  day-3.py  day-4.py
2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  makefile  requirements.txt  template.py
2025/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  template.py
(+16 files in other folders)
