[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code solutions"
authors = ["Cem Alpturk <cem.alpturk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
